--- a/test.cfg
+++ b/test.cfg
@@ -1,8 +1,8 @@
 #zfssync cfg
-DESCRIPTION="Clovis data"
-PREVSNAPSHOT="charles/clovis/shares/data@auto-$YESTERDAY.0330-1w"
-SNAPSHOT="charles/clovis/shares/data@auto-$TINYDATE.0330-1w"
+DESCRIPTION="Sample dataset"
+PREVSNAPSHOT="sourcevolume/sample@auto-$YESTERDAY.0330-1w"
+SNAPSHOT="sourcevolume/sample@auto-$TINYDATE.0330-1w"
 KEY="/data/ssh/replication"
-PORT="14514"
-RHOST="gateway.hybel.csdnserver.com"
-TARGETFS="cornelia/clovisdata"
+PORT="1337"
+RHOST="foobar.example.com"
+TARGETFS="targetvolume/sample"
